# oneapi_UZ

./: .gitignore  CMakeLists.txt  README.md  dpc_common.hpp
benchmarks/: benchmarks.h  binomial.cpp  binomial.h  gaussian.cpp  gaussian.h  gaussian_2d_tp.cpp  io.cpp  io.hpp  mandelbrot.cpp  mandelbrot.h  matadd.cpp  matadd.h  matmul.cpp  matmul.h  nbody.cpp  nbody.h  rap.cpp  rap.h  ray.cpp  ray.h
benchmarks/binomial/: binomial.cpp  cpu_queue.cpp  fpga_queue.cpp  queue.cpp  queue.sycl  setup_sycl.cpp
benchmarks/gaussian/: cpu_queue.cpp  fpga_queue.cpp  gaussian.cpp  queue.cpp  queue.sycl  queue_mia.cpp  queue_old.cpp  queueunpacked.cpp  setup_sycl.cpp
benchmarks/mandelbrot/: cpu_queue.cpp  fpga_queue.cpp  mandelbrot.cpp  queue.cpp  queue.sycl  setup_sycl.cpp
benchmarks/matadd/: cpu_queue.cpp  fpga_queue.cpp  matadd.cpp  queue.cpp  queue.sycl  setup_sycl.cpp
benchmarks/matmul/: cpu_queue.cpp  fpga_queue.cpp  matmul.cpp  queue.cpp  queue.sycl  setup_sycl.cpp
benchmarks/nbody/: cpu_queue.cpp  fpga_queue.cpp  nbody.cpp  queue.cpp  queue.sycl  setup_sycl.cpp
benchmarks/rap/: cpu_queue.cpp  fpga_queue.cpp  queue.cpp  queue.sycl  rap.cpp  setup_sycl.cpp
benchmarks/ray/: cpu_queue.cpp  fpga_queue.cpp  queue.cpp  queue.sycl  ray.cpp  setup_sycl.cpp
benchmarks/schedulers/: dyn.cpp  hg.cpp  schedulers.h  st.cpp
examples/extras/ray_scenes/: ray1.scn  ray2.scn  ray3.scn
include/sycl/: group.hpp  nd_item.hpp  platform.hpp  program.hpp  version.hpp
include/sycl/detail/: cg.hpp  common.hpp  pi.h  pi.hpp
include/sycl/info/: info_desc.hpp
